<resources>
    <string name="app_name">TUPAPP</string>


    <!--Titles-->
    <string name="t_itemname"><b>Item Name:</b> </string>
    <string name="t_category"><b>Category:</b> </string>
    <string name="t_subcategory"><b>Sub-Category:</b> </string>
    <string name="t_contactno"><b>Contact No:</b>  </string>
    <string name="t_price"><b>Price :</b>  </string>
    <string name="t_description"><b>Description:</b>  </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="v_item">View Item</string>
    <string name="action_settings">Settings</string>

    <!-- Activity My Item Details strings-->
    <string name="myid_seller">Seller</string>
    <string name="myid_price">Price</string>
    <string name="myid_category">Category</string>
    <string name="myid_subcategory">Sub-Category</string>
    <string name="myid_contact">Contact Number</string>
    <string name="myid_status">Status</string>
    <string name="myid_description">Description</string>
    <string name="myid_delete">Delete</string>
    <string name="myid_edit">Edit</string>
    <string name="myid_changestatus">Change status to sold/selling</string>

    <!-- Fragment About Us strings-->
    <string name="au_app_version"><b>Version:</b> 1.04</string>
    <string name="au_app_name_version">TUPAPP v1.04</string>
    <string name="au_coders"><b>Coders:</b>
        \n\t\t\t\t\t\t\t\t\t Jemuel Torres Balingbing
        \n\t\t\t\t\t\t\t\t\t (User Interface and Front-End)
        \n\n\t\t\t\t\t\t\t\t\t Roberto Gantang Bonifacio Jr,
        \n\t\t\t\t\t\t\t\t\t (Server-side Scripting)
        \n\n\t\t\t\t\t\t\t\t\t Anthony Matthew Lolarga Deco
        \n\t\t\t\t\t\t\t\t\t (Backend and Data Handling)</string>
    <string name="au_adviser"><b>Adviser:</b>
        \n\t\t\t\t\t\t\t\t Dir. Renato Butch Bituonan, University
        \n\t\t\t\t\t\t\t\t Research and Development Services</string>
    <string name="au_contact_us"><b>Contact Us:</b>
        \n\n\t\t\t\t\t\t\t\t\t\t Jemuel Balingbing
        \n\t\t\t\t\t\t\t\t\t\t jemuelbim20@gmail.com
        \n\n\t\t\t\t\t\t\t\t\t\t Roberto Bonifacio Jr,
        \n\t\t\t\t\t\t\t\t\t\t berttsss@gmail.com
        \n\n\t\t\t\t\t\t\t\t\t\t Anthony Deco
        \n\t\t\t\t\t\t\t\t\t\t anthonydeco322@gmail.com
        \n\n\t\t\t\t\t\t\t\t\t\t Dir. Renato Bituonan
        \n\t\t\t\t\t\t\t\t\t\t rbituonan@yahoo.com</string>

    <!-- Fragment Add Item strings-->
    <string name="ai_productname">Product Name</string>
    <string name="ai_cancel">Cancel</string>
    <string name="ai_submit">Submit</string>
    <string name="ai_addfromcamera">Add from camera</string>
    <string name="ai_addfromgallery">Add from gallery</string>

    <!-- Fragment My Dashboard strings-->
    <string name="md_greet">Hello</string>
    <string name="md_student">Student</string>
    <string name="md_sellitem">SELL AN ITEM</string>
    <string name="md_browseitem">BROWSE ITEM</string>
    <string name="md_viewcalendar">VIEW MY CALENDAR</string>
    <string name="md_handbook">OPEN STUDENT HANDBOOK</string>

    <!-- Fragment My Grades strings-->
    <string name="mg_subject">Subject</string>
    <string name="mg_units">Units</string>
    <string name="mg_rating">Rating</string>
    <string name="mg_back">Back</string>
    <string name="mg_semester">Semester</string>
    <string name="mg_schoolyear">School Year</string>

    <!-- Fragment My Schedule strings-->
    <string name="ms_room">Room</string>
    <string name="ms_daytime">Day/Time</string>

    <!-- Activity Login page strings -->
    <string name="login_student_ID">Student ID</string>
    <string name="login_password">Password</string>
    <string name="login_background">Background</string>
    <string name="login_logo">App Logo</string>
    <string name="login_button_login">Login</string>

    <!--Additional strings-->
    <string name="ecscard_thumbnail">Thumbnail</string>
    <string name="ecs_noresults">No results found!</string>
    <string name="btn_sellitem">Sell Item</string>

    <!-- Sub category values -->
    <string name="Books" translatable="false">sub_category_books</string>
    <string name="Shoes" translatable="false">sub_category_shoes</string>
    <string name="Clothes" translatable="false">sub_category_clothes</string>
    <string name="Measuring_Tools" translatable="false">sub_category_measuring_tools</string>
    <string name="Computer_Peripherals" translatable="false">sub_category_computer_peripherals</string>
    <string name="Phone_Accessories" translatable="false">sub_category_phone_accessories</string>
    <string name="Others" translatable="false">sub_category_others</string>

    <!--START OF CATEGORY STRING ARRAYS-->
    <string-array name="category">
        <item>Books</item>
        <item>Shoes</item>
        <item>Clothes</item>
        <item>Measuring Tools</item>
        <item>Computer Peripherals</item>
        <item>Phone Accessories</item>
        <item>Others</item>
    </string-array>

    <string-array name="searchcategory">
        <item>Select All</item>
        <item>Books</item>
        <item>Shoes</item>
        <item>Clothes</item>
        <item>Measuring Tools</item>
        <item>Computer Peripherals</item>
        <item>Phone Accessories</item>
        <item>Others</item>
    </string-array>
    <!--END OF CATEGORY STRING ARRAYS-->

    <!--START OF SUBCATEGORY STRING ARRAYS-->
    <string-array name="sub_category_clothes">
        <item>Please Select</item>
        <item>NSTP Uniform</item>
        <item>Polo</item>
        <item>Blouse</item>
        <item>Mens Pants</item>
        <item>Womens Pants</item>
        <item>P.E Uniform</item>
        <item>Accessories</item>
    </string-array>

    <string-array name="sub_category_shoes">
        <item>Please Select</item>
        <item>Rubber Shoes</item>
        <item>Black Shoes</item>
        <item>Flat Shoes</item>
        <item>Sandals</item>
        <item>ROTC Boots</item>
    </string-array>

    <string-array name="sub_category_books">
        <item>Please Select</item>
        <item>Textbooks</item>
        <item>Fictional Books</item>
        <item>Non-Fictional Books</item>
        <item>Novels</item>
        <item>Filipinana Books</item>
        <item>Thesis Copies</item>
        <item>Gearbook</item>
    </string-array>

    <string-array name="sub_category_measuring_tools">
        <item>Please Select</item>
        <item>Ruler</item>
        <item>T-Square</item>
        <item>Protractor</item>
        <item>Compass</item>
        <item>Meter Stick</item>
        <item>Tape Measure</item>
    </string-array>

    <string-array name="sub_category_computer_peripherals">
        <item>Please Select</item>
        <item>Mouse</item>
        <item>Keyboard</item>
        <item>Mouse Pad</item>
        <item>Laptop Cooler</item>
        <item>Flash Drive</item>
        <item>External Hard Drive</item>
        <item>Projector</item>
        <item>SD Card Reader</item>
    </string-array>

    <string-array name="sub_category_phone_accessories">
        <item>Please Select</item>
        <item>USB Cords</item>
        <item>Adapters</item>
        <item>OTG Drives</item>
        <item>SD Cards</item>
        <item>Selfie Sticks</item>
        <item>Earphones</item>
        <item>SIM Cards</item>
        <item>Jack Plugs</item>
    </string-array>

    <string-array name="sub_category_others">
        <item>Others</item>
    </string-array>

    <!--END OF SUBCATEGORY STRING ARRAYS-->

    <string name="ts_title">Buy and Sell</string>
    <string name="backdrop_title">Buy and Sell</string>
    <string name="backdrop_subtitle">Browse Items You Want</string>

    <string-array name="ts_name">
        <item>Piano</item>
        <item>LG Tv</item>
        <item>ASUS Laptop</item>
        <item>Cabinet</item>
        <item>Chairs</item>
        <item>Sofa</item>
        <item>AVR</item>
        <item>Electric Fan</item>
        <item>Speaker</item>
        <item>Dispenser</item>
    </string-array>

    <string-array name="ts_location">
        <item>₱20,000</item>
        <item>₱15,000</item>
        <item>₱24,000</item>
        <item>₱3,000</item>
        <item>₱1,200</item>
        <item>₱9,000</item>
        <item>₱500</item>
        <item>₱700</item>
        <item>₱650</item>
        <item>₱1,300</item>
    </string-array>
</resources>
