<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin">

            <ScrollView
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_version"
                        android:gravity="start"
                        android:text="@string/au_app_version"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15sp"
                        android:gravity="start"
                        android:text="@string/au_coders"
                        android:id="@+id/tv_coders"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:gravity="start"
                        android:id="@+id/tv_adviser"
                        android:text="@string/au_adviser"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:gravity="start"
                        android:text="@string/au_contact_us"
                        android:id="@+id/tv_contact_us" />


                </LinearLayout>


            </ScrollView>

        </android.support.v7.widget.CardView>
    </LinearLayout>
