<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_color"
    android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:background="#ccc"
                            android:layout_marginEnd="5dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_menu_camera"
                                android:id="@+id/ivCamera"
                                android:layout_gravity="center"
                                android:contentDescription="@string/ai_addfromcamera" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="10dp"
                            android:background="#ccc"
                            android:layout_marginEnd="5dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_menu_gallery"
                                android:id="@+id/ivGallery"
                                android:layout_gravity="center"
                                android:contentDescription="@string/ai_addfromgallery" />
                        </LinearLayout>
                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:id="@+id/LinearLayout1">
                            </LinearLayout>

                        </HorizontalScrollView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:weightSum="100">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_weight="10">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/myid_category"
                                    android:textSize="20sp"
                                    android:padding="10sp"
                                    android:gravity="center"/>
                                <Spinner
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/sCateg"
                                    android:entries="@array/category"
                                    android:padding="20sp">
                                </Spinner>


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_weight="10">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/myid_subcategory"
                                    android:textSize="20sp"
                                    android:padding="10sp"
                                    android:gravity="center"/>

                                <Spinner
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="#fff"
                                    android:id="@+id/sSubCateg"
                                    android:padding="20sp"
                                    >
                                </Spinner>


                            </LinearLayout>


                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/etProdName"
                                android:hint="@string/ai_productname"
                                android:paddingTop="15dp"
                                android:paddingBottom="15dp"
                                android:imeOptions="actionNext"/>
                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/etContact"
                                android:hint="@string/myid_contact"
                                android:inputType="number"
                                android:paddingTop="15dp"
                                android:paddingBottom="15dp"
                                android:imeOptions="actionNext"/>
                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:ems="10"
                                android:id="@+id/etPrice"
                                android:hint="@string/myid_price"
                                android:paddingTop="15dp"
                                android:paddingBottom="15dp"
                                android:imeOptions="actionNext"/>
                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/etDesc"
                                android:hint="@string/myid_description"
                                android:paddingTop="15dp"
                                android:paddingBottom="15dp"
                                />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="38dp"
                            android:text="@string/ai_cancel"
                            android:textColor="#fff"
                            android:background="#96281b"
                            android:id="@+id/bCancel"
                            style="@style/Widget.AppCompat.Button.Borderless"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="38dp"
                            android:text="@string/ai_submit"
                            android:textColor="#fff"
                            android:background="#18ad5b"
                            android:id="@+id/bSubmit"
                            android:layout_marginStart="41dp"
                            style="@style/Widget.AppCompat.Button.Borderless"/>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>


        </android.support.v7.widget.CardView>

    </LinearLayout>