<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_color"
    >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight=".1">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mg_subject"
                            android:id="@+id/tvsub"
                            android:textStyle="bold"
                            android:textColor="#bd2038"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mg_units"
                            android:id="@+id/tvuni"
                            android:textAlignment="center"
                            android:layout_alignBaseline="@+id/tvsub"
                            android:layout_alignBottom="@+id/tvsub"
                            android:layout_marginStart="120dp"
                            android:textStyle="bold"
                            android:gravity="start"
                            android:textColor="#bd2038"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mg_rating"
                            android:textAlignment="center"
                            android:layout_alignBaseline="@+id/tvsub"
                            android:layout_alignBottom="@+id/tvsub"
                            android:layout_alignEnd="@+id/tvuni"
                            android:textStyle="bold"
                            android:gravity="end"
                            android:textColor="#bd2038"/>

                    </RelativeLayout>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        android:background="#c0c0c0"/>
                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/lvGrades"
                        />

                </LinearLayout>


            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight=".9"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:textColor="#fff"
                    android:background="@color/colorPrimary"
                    android:textAlignment="center"
                    android:text="@string/mg_back"
                    android:id="@+id/gback"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />
            </LinearLayout>

        </LinearLayout>
