<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#888"
        android:scaleType="centerCrop"
        android:contentDescription="@string/login_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/tup_logo"
                android:scaleType="fitCenter"
                android:id="@+id/imageView2"
                android:contentDescription="@string/login_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_user"
                    android:contentDescription="@string/login_student_ID" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="#fff"
                    android:hint="@string/login_student_ID"
                    android:background="#00000000"
                    android:textColorHint="#fff"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textColorLink="@android:color/transparent"
                    android:id="@+id/studID" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="#fff"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_password"
                    android:contentDescription="@string/login_password" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:hint="@string/login_password"
                    android:background="#00000000"
                    android:textColorHint="#fff"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textColorLink="@android:color/transparent"
                    android:id="@+id/studPass" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="#fff" />

            <Button
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/login_button_login"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:id="@+id/bLogIn"
                style="@style/Widget.AppCompat.Button.Borderless"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

        </LinearLayout>
    </LinearLayout>

</FrameLayout>


